2002-10-28  Jordi Mallach  <jordi@sindominio.net>

	* Finally, GNOME2!

	* configure.in: require GTK 2.0.0 and various GNOME2 libs.
	* src/Makefile.am: new GNOME2 includes.
	* src/client.c, src/client.h, src/commands.c, src/dialogs.c,
	src/fields.c, src/fields.h, src/gtetrinet.c, src/misc.c, src/misc.h,
	src/partyline.c, src/tetrinet.c, src/tetrinet.h: initial port to
	GNOME2 by James Antill.

2002-10-28  Jordi Mallach  <jordi@sindominio.net>

	* src/config.c (config_loadconfig): patch from James Antill. Save
	and restore the server, as well as the server history.

2002-10-27  Jordi Mallach  <jordi@sindominio.net>

	* NEWS, configure.in: released gtetrinet 0.4.4.

2002-10-22  James Antill  <james@and.org>

	* src/tetrinet.c (tetrinet_inmessage): Check all values from atoi()
	for out of bounds.
	(tetrinet_inmessage): Check all int values from sscanf() for out of
	bounds.
	(tetrinet_inmessage): Stop buffer overflows in sscanf() %s.
	(tetrinet_inmessage): Protect playercount from overflow.
	(speclist_add): Protect spectatorcount from overflow.

2002-10-21  James Antill  <james@and.org>

	* src/tetrinet.c: Convert hard coded color/attribute values into
	constants and %c formats, when used in g_snprintf(). Readability.
	
	* src/*.c: Replace all uses of sprintf(), strcpy(), strcat(), 
	strncpy() and strncat() with GTET_STRCPY() or GTET_STRCAT().

	* src/config.c (config_getthemeinfo): Fixup buffer overflows on theme
	info load.

	* src/misc.h (GTET_STRCPY): Added safe strcpy() function.
	(GTET_STRCAT): Added safe strcat() function.
	(GTET_O_STRCPY): Added safe strcpy() function, with auto size.
	(GTET_O_STRCAT): Added safe strcat() function, with auto size.

2002-10-21  Jordi Mallach  <jordi@sindominio.net>

	* NEWS, configure.in: released gtetrinet 0.4.3.

2002-10-21  Jordi Mallach  <jordi@sindominio.net>

	* src/client.c: add missing include "../config.h".
	* src/commands.c: ifdef around include "../config.h".
	* src/config.c: likewise.
	* src/dialogs.c: likewise.