@@ -3,7 +3,7 @@ AC_INIT
 AC_PREREQ(2.52)
 AC_CONFIG_SRCDIR([src/gtetrinet.c])
 AM_CONFIG_HEADER(config.h:config.h.in)
-AM_INIT_AUTOMAKE(gtetrinet, 0.4.4)
+AM_INIT_AUTOMAKE(gtetrinet, 0.5.0pre1)
 
 AC_PROG_CC
 
