@@ -219,21 +219,39 @@ void commands_checkstate ()
 
 void about_command (GtkWidget *widget, gpointer data)
 {
-    GtkWidget *about;
+    GtkWidget *about, *hbox;
+    GdkPixbuf *logo;
 
     const char *authors[] = {N_("Ka-shu Wong <kswong@zip.com.au>"),
                              N_("James Antill <james@and.org>"),
                              NULL};
-    const char *documentors[] = {N_("Ka-shu Wong <kswong@zip.com.au>"),
+    const char *documenters[] = {N_("Ka-shu Wong <kswong@zip.com.au>"),
                                  N_("Jordi Mallach <jordi@sindominio.net>"),
                                  NULL};
+    /* Translators: translate as your names & emails */
+    const char *translators = _("translator_credits");
+
+    logo = gdk_pixbuf_new_from_file (PIXMAPSDIR "/gtetrinet.png", NULL);
     
     about = gnome_about_new (APPNAME, APPVERSION,
                              _("(C) 1999, 2000, 2001, 2002 Ka-shu Wong"),
-                             _("A Tetrinet client for GNOME.\n"
-                               "Homepage: http://gtetrinet.sourceforge.net/\n"),
+                             _("A Tetrinet client for GNOME.\n"),
                              authors,
-                             documentors,
-                             NULL, NULL);
+                             documenters,
+			     strcmp (translators, "translator_credits") != 0 ?
+				     translators : NULL,
+			     logo);
+
+    if (logo != NULL)
+		g_object_unref (logo);
+
+    hbox = gtk_hbox_new (TRUE, 0);
+    gtk_box_pack_start (GTK_BOX (hbox),
+		gnome_href_new ("http://gtetrinet.sourceforge.net/", _("GTetrinet Home Page")),
+		FALSE, FALSE, 0);
+    gtk_box_pack_start (GTK_BOX (GTK_DIALOG (about)->vbox),
+		        hbox, TRUE, FALSE, 0);
+    gtk_widget_show_all (hbox);
+
     gtk_widget_show (about);
 }
