@@ -1,5 +1,15 @@
 2002-10-28  Jordi Mallach  <jordi@sindominio.net>
 
+	* src/commands.c (about_command): rename documentors to documenters.
+	Add translator credits. Assign the gtetrinet icon to the about dialog.
+	Add a hyperlink to GTetrinet's homepage.
+	* src/gtetrinet.c (main): set bind_textdomain_codeset to "UTF-8".
+	Remove useless setlocale call.
+
+	* configure.in: bump version to 0.5.0pre1.
+
+2002-10-28  Jordi Mallach  <jordi@sindominio.net>
+
 	* Finally, GNOME2!
 
 	* configure.in: require GTK 2.0.0 and various GNOME2 libs.
